# poetry-app

./: .dockerignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
src/hello/routes/: app.py
src/hello/services/: response.py
src/routes/: app.py
src/services/: response.py
